<resources>
    <string name="app_name">Fake Gps</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_token">token</string>
    <string name="sign_with_email">Sign With Email</string>
    <string name="sign_with_token">Sign With Token</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="sign_up">Sign Up</string>
    <string name="prompt_name">Name</string>
    <string name="action_confirm_verify_email">Confirm Verify Email</string>
    <string name="message_to_user">Message To User</string>
    <string name="title_auth">Module Title</string>
</resources>