<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.welcome.WelcomeFragment">

    <data>

        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_with_token"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{onClick::onClick}"
            android:text="@string/sign_with_token"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_with_email"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_up"
            app:layout_constraintStart_toStartOf="@id/btn_sign_up" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_with_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{onClick::onClick}"
            android:text="@string/sign_with_email"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_up"
            app:layout_constraintStart_toStartOf="@id/btn_sign_up" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{onClick::onClick}"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".85" />

        <TextView
            android:id="@+id/tv_anonymous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{onClick::onClick}"
            android:text="Anonymous"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>